--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,37 @@
-<p>cart works!</p>
+<div class="container">
+  <h2>Your Cart</h2>
+  <div class="total-price" style="color: aliceblue; background-color: rgb(9, 97, 43);" i18n>
+    Total Price: {{ calculateTotalPrice() | currency:'USD':'symbol':'1.2-2' }}
+  </div>
+
+  <div *ngIf="groupedCarts && groupedCarts.length > 0" class="table-responsive">
+    <table class="table table-bordered">
+      <thead>
+      <tr>
+        <th >Image</th>
+        <th >Product Name</th>
+        <th >Price</th>
+        <th >Quantity</th>
+        <th >Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let cartItem of groupedCarts">
+        <td><img [src]="cartItem.image" alt="{{ cartItem.productName }}" class="img-thumbnail" width="100" height="100" /></td>
+        <td>{{ cartItem.productName }}</td>
+        <td>{{ cartItem.price }}$</td>
+        <td style="color: darkgreen;">{{ cartItem.quantity }}
+        </td>
+        <td>
+          <button (click)="removeFromCart(cartItem.id)" class="btn btn-danger"i18n>Remove</button>
+          <button class="btn btn-primary" (click)="passerCommande(cartItem)">Passez la commande</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div *ngIf="!groupedCarts || groupedCarts.length === 0">
+    <p class="text-info"i18n>Your cart is empty.</p>
+  </div>
+</div>
