--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,1 +1,40 @@
-<p>edit works!</p>
+<br><br>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <form (ngSubmit)="onSubmit()" class="bg-black border-0 rounded p-3 text-white">
+        <h2 i18n>Edit Product</h2>
+        <div class="form-group">
+          <label for="name"i18n>Name:</label>
+          <input type="text" id="name" name="name" [(ngModel)]="product.name" required class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="description"i18n>Description:</label>
+          <textarea id="description" name="description" [(ngModel)]="product.description" required class="form-control"></textarea>
+        </div>
+        <div class="form-group">
+          <label for="quantity" i18n>Quantity:</label>
+          <input type="number" id="quantity" name="quantity" [(ngModel)]="product.quantity" required class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="price" i18n>Price:</label>
+          <input type="number" id="price" name="price" [(ngModel)]="product.price" required class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="category"i18n>Category:</label>
+          <input type="text" class="form-control" id="category" [(ngModel)]="product.category" name="category" required>
+        </div>
+        <div class="form-group">
+          <label for="imageUpload" i18n>Upload Image:</label>
+          <input type="file" class="form-control" id="imageUpload" (change)="onImageUpload($event)">
+        </div>
+        <div *ngIf="imagePreview">
+          <img [src]="imagePreview" alt="Image Preview" class="img-fluid mt-3">
+        </div>
+        <br>
+        <button type="submit" class="btn btn-warning" i18n>Update Product</button>
+      </form>
+    </div>
+  </div>
+</div>
+<br>
