--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,30 @@
-<p>registre works!</p>
+<section class="bg-image border border-dark rounded p-4 centered-section">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h2 class="text-center text-white mb-4" i18n>Create Account</h2> <!-- Added "Register" -->
+        <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)" class="mt-2 p-3 custom-form">
+          <div class="form-group">
+            <label for="email" class="text-white" i18n>Email:</label>
+            <input type="email" id="email" name="email" ngModel required class="form-control" style="background-color: rgba(12, 15, 43, 0.8);">
+          </div>
+
+          <div class="form-group">
+            <label for="password" class="text-white" i18n>Password:</label>
+            <input type="password" id="password" name="password" ngModel required minlength="8" class="form-control" style="background-color: rgba(12, 15, 43, 0.8);">
+            <small class="form-text text-warning" i18n>The password must contain at least 8 characters.</small>
+          </div>
+
+          <div class="form-group">
+            <label for="confirmPassword" class="text-white" i18n>Confirm Password:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" ngModel required class="form-control" style="background-color:rgba(12, 15, 43, 0.8);">
+          </div>
+
+          <div class="custom-btn-container">
+            <button type="submit" class="btn btn-primary custom-btn"i18n>Register</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
